# keboli-interview-agent

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deploy.sh  generate_api_docs.py  pyproject.toml  start.sh  test_turn_detector.py
.github/workflows/: deploy.yml
app/: agent_worker.py  config.py  exceptions.py  fastapi_server.py  graph.py  keboli_client.py  llm.py  llm_adapter.py  observability.py  prompt_manager.py  state.py  timing.py
app/node/: interview_node.py  skill_extraction_node.py
docs/: API_Documentation.md  openapi.json
requirements/: base.txt  dev.txt
